--- a/blog.html
+++ b/blog.html
@@ -23,6 +23,10 @@
             <p>Suscribete y like</p>
         </div>
     </div>
+
+    <footer>
+        derechos reservador Copyright SerBussines
+    </footer>
     
 </body>
 </html>
