--- a/blog.html
+++ b/blog.html
@@ -22,11 +22,12 @@
 
             <p>Suscribete y like</p>
         </div>
+        <footer>
+            derechos reservador Copyright SerBussines💖
+        </footer>
     </div>
 
-    <footer>
-        derechos reservador Copyright SerBussines
-    </footer>
+    
     
 </body>
 </html>
