--- a/blog.html
+++ b/blog.html
@@ -23,7 +23,7 @@
             <p>Suscribete y like</p>
         </div>
         <footer>
-            derechos reservador Copyright SerBussines💖
+            derechos reservados Platzi.com 🔥
         </footer>
     </div>
 
