--- a/blog.html
+++ b/blog.html
@@ -18,7 +18,7 @@
             <h1>Titulolo para el blog post</h1>
             <p>Mostrando el contenido del blog post justo aqui</p>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident ipsum natus tenetur minima vero molestias, aperiam quis, accusamus quod sit magnam eligendi, dolorum adipisci explicabo quisquam similique! Eaque, quae ipsa.
+            <p>Lorem Ipsum dolor sit amet consectetur adipisicing elit. Provident ipsum natus tenetur minima vero molestias, aperiam quis, accusamus quod sit magnam eligendi, dolorum adipisci explicabo quisquam similique! Eaque, quae ipsa.
             Rerum exercitationem autem laudantium iure ducimus dolor facilis, saepe aperiam. Ullam a ut unde similique temporibus molestias officiis facilis iure blanditiis voluptates? Beatae laudantium sint eaque. Optio error commodi quod?</p>
 
             <p>Suscribete y like</p>
